# tline

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  README.md  cableTypes.cpp  cableTypes.h  constants.h  dragDrop.cpp  dragDrop.h  foo.plot  helpAbout.cpp  helpAbout.h  helpInfo.cpp  helpInfo.h  info.h  start.htm  strchrnul.cpp  strchrnul.h  theme.h  tline.cpp  tline.fbp  tline.h  tline.rc  tlineApp.cpp  tlineIcon.cpp  tlineIcon.h  tlineLogic.cpp  tlineLogic.h  tlineMain.cpp  tlineUI.cpp  tlineUI.h  tlineUIuserLineDialog.cpp  tlineUIuserLineDialog.h  topologies.cpp  tuner.cpp  tuner.h  userLine.cpp  userLine.h  version.h
debian/: changelog  control  copyright  rules
doc/: equations.odt
generated-resources/linux/mime/applications/: tline.desktop
generated-resources/linux/xpm/: tlineIcon.xpm
icons/: README  tline-tline.xml  tlineIcon.xpm
resources/: Makefile  tline-tline.xml  tline.appdata.xml  tline.desktop
spec/: tline.spec
valgrind/: README  gtk.suppression
windows-installer/: BUNDLED_SOFTWARE  tline.nsi  tlineIcon.xcf
